# gesture_based_interface

./: .gitignore  .gitmodules  README.md  SOFAR.files  SOFAR.includes  build.sh  clean_build.sh  configure_for_kinect  kinect_move_server.conf  prerequisites.sh  web_installer.sh
BaxterGBI_core/: CMakeLists.txt  package.xml  setup.py
BaxterGBI_core/launch/: config.yaml  launchfile.launch
BaxterGBI_core/scripts/: core
BaxterGBI_core/src/gbi_states/: ActionState.py  BlockingState.py  ConfigState.py  ExpiringState.py  FsmEvent.py  InitState.py  MacroMenuState.py  MacroState.py  MainMenuState.py  MenuState.py  PlayMenuState.py  RecordMenuState.py  RemoveMenuState.py  SequenceMenuState.py  SubMacroMenuState.py  SubSequenceMenuState.py  WaitConfigState.py  WaitUserState.py  __init__.py  gbi_states.py
BaxterGBI_gui/: BaxterGBI_gui.files  BaxterGBI_gui.includes  CMakeLists.txt  package.xml
BaxterGBI_gui/include/BaxterGBI_gui/: actionpanel.h  configpanel.h  custommodel.h  mainwindow.h  mapping.h  menupanel.h  rosworker.h  selectionfiltermodel.h  tabcontent.h
BaxterGBI_gui/resources/: resources.qrc
BaxterGBI_gui/src/: TopicScanner.cpp  TriggerService.cpp  actionpanel.cpp  actionpanel.ui  configpanel.cpp  configpanel.ui  custommodelitem.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mapping.cpp  mapping.ui  menupanel.cpp  menupanel.ui  rosworker.cpp  scan.cpp  scan.cpp.old  selectionfiltermodel.cpp  tabcontent.cpp  tabcontent.ui
BaxterGBI_gui/src/include/: TopicScanner.h  configpanel.h  mainwindow.h  mapping.h  rosworker.h
BaxterGBI_gui/src/ui/: mapping.ui  menupanel.ui
BaxterGBI_input_keyboard/: CMakeLists.txt  package.xml
BaxterGBI_input_keyboard/scripts/: keystroke
BaxterGBI_pbr/: CMakeLists.txt  details.txt  package.xml
BaxterGBI_pbr/launch/: pbr_server.launch
BaxterGBI_pbr/msg/: mirror_bag.msg  mirror_end_effector.msg  playback_msg.msg  record_status.msg
BaxterGBI_pbr/scripts/: ik_header.py  joint_recorder_node  joint_recorder_node.py  mirror_client  mirror_client.py  mirror_filter_data  mirror_rosbag_to_ftxt.py  mirror_server  mirror_server.py  mirror_server_rosbag.py  pbr_client_TEST  pbr_client_TEST.py  pbr_header.py  pbr_server.py  pbr_server_baxter  pbr_server_baxter.py  pbr_server_filesys.py
BaxterGBI_pbr/src/BaxterGBI_pbr/: __init__.py  ik_header.py  pbr_header.py  recorder.py
BaxterGBI_pbr/srv/: ListFiles.srv  Playback.srv  ReachGoal.srv  Record.srv  RecordStart.srv
BaxterGBI_pbr_msg/: CMakeLists.txt  package.xml
BaxterGBI_pbr_msg/msg/: mirror_end_effector.msg
BaxterGBI_pbr_srv/: CMakeLists.txt  package.xml
BaxterGBI_pbr_srv/srv/: Playback.srv  RecordStop.srv  RenameFile.srv
baxter_gbi_core/: CMakeLists.txt  README.md  config.yaml  fsm.yaml  package.xml
baxter_gbi_core/launch/: pre_configured_fsm.launch
baxter_gbi_core/scripts/: core  parser.py
baxter_gbi_core/src/gbi_states/: ActionState.py  BlockingState.py  ConfigState.py  ExpiringState.py  FileMenuState.py  FsmEvent.py  InitState.py  MacroMenuState.py  MacroPause.py  MacroState.py  Macro_SequencePause.py  MainMenuState.py  MenuState.py  PauseState.py  PlayMenuState.py  PlayPause.py  PlayState.py  PlaybackState.py  RecordMenuState.py  RecordPause.py  RecordState.py  RemoveMenuState.py  SelectionMenuState.py  SequenceMenuState.py  SequencePause.py  SequenceState.py  SubMacroMenuState.py  SubSequenceMenuState.py  WaitConfigState.py  (+2 more)
baxter_gbi_core_msgs/: CMakeLists.txt  README.md  package.xml
baxter_gbi_core_msgs/msg/: status.msg
baxter_gbi_gui/: CMakeLists.txt  README.md  package.xml
baxter_gbi_gui/resources/: resources.qrc
baxter_gbi_gui/src/: BaxterDisplay.cpp  FsmInputConfigurator.cpp  KeystrokePublisher.cpp  TopicScanner.cpp  TriggerService.cpp  actionpanel.cpp  configpanel.cpp  general_utilities.cpp  main.cpp  mainwindow.cpp  mapping.cpp  menupanel.cpp  rosworker.cpp  selectionfiltermodel.cpp  tabcontent.cpp
baxter_gbi_input_msgs/: CMakeLists.txt  README.md  package.xml
baxter_gbi_input_msgs/msg/: signal.msg
baxter_gbi_pbr/: CMakeLists.txt  README.md  package.xml  setup.py
baxter_gbi_pbr/launch/: baxter_pbr.launch
baxter_gbi_pbr/scripts/: joint_recorder_node  mirror_client  mirror_client_from_text_left  mirror_client_from_text_right  mirror_filter_data  mirror_filter_data_left  mirror_filter_data_right  mirror_rosbag_to_ftxt  mirror_server  mirror_server_TOTES  mirror_server_left  mirror_server_right  mirror_server_rosbag  mirror_server_rosbag_left_new  mirror_server_rosbag_right_new  pbr_client_TEST  pbr_client_test  pbr_server_baxter  pbr_server_filesys
baxter_gbi_pbr_msgs/: CMakeLists.txt  README.md  package.xml
baxter_gbi_pbr_msgs/action/: playback.action  record.action
baxter_gbi_pbr_msgs/msg/: modify_playback.msg  record_status.msg
baxter_gbi_pbr_srvs/: CMakeLists.txt  README.md  package.xml
baxter_gbi_pbr_srvs/srv/: CalibrateMirror.srv  DeleteFile.srv  Gripper.srv  Playback.srv  RecordStart.srv
baxter_gbi_safety_monitor/: CMakeLists.txt  README.md  package.xml
baxter_gbi_safety_monitor/launch/: input_to_fsm.launch  kinect_to_fsm.launch  shadow_function.launch
baxter_gbi_safety_monitor/rviz_resources/: rviz_conf (copia).rviz  rviz_conf.rviz
baxter_gbi_safety_monitor/src/: activate.cpp
beacons_presence_scanner/: CMakeLists.txt  README.md  package.xml
beacons_presence_scanner/launch/: beacon.launch
beacons_presence_scanner/src/: beacons_scanner.cpp
beacons_proximity/: CMakeLists.txt  README.md  buildscript.gradle  package.xml  settings.gradle
beacons_proximity/android_wear_pub/: AndroidManifest.xml  build.gradle
beacons_transforms/: CMakeLists.txt  README.md  package.xml
beacons_transforms/launch/: beacon_transfomation.launch
beacons_transforms/src/: beacon_broadcaster.cpp
beacons_transforms_msgs/: CMakeLists.txt  README.md  package.xml
beacons_transforms_msgs/msg/: BeaconRadius.msg
beacons_transforms_srvs/: CMakeLists.txt  README.md  package.xml
beacons_transforms_srvs/srv/: SetRadius.srv
http_bridge/: CMakeLists.txt  package.xml
http_bridge/launch/: http_bridge.launch
http_bridge/scripts/: server
(+215 files in other folders)
