<?xml version="1.0"?>
<package format="2">
  <name>BaxterGBI_core</name>
  <version>0.0.0</version>
  <description>The BaxterGBI_core package</description>

  <maintainer email="roncapat@gmail.com">Patrick Roncagliolo</maintainer>
  <maintainer email="antoniobongio@gmail.com">Antonino Bongiovanni</maintainer>
  <maintainer email="marinoantonio96@gmail.com">Antonio Marino</maintainer>

  <license>GPLv3</license>

  <author email="roncapat@gmail.com">Patrick Roncagliolo</author>
  <author email="antoniobongio@gmail.com">Antonino Bongiovanni</author>
  <author email="marinoantonio96@gmail.com">Antonio Marino</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>BaxterGBI_core_srvs</build_depend>
  <build_depend>BaxterGBI_input_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>smach</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>BaxterGBI_core_srvs</exec_depend>
  <exec_depend>BaxterGBI_input_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
