<?xml version="1.0"?>
<package format="2">
  <name>BaxterGBI_input_keyboard</name>
  <version>0.0.0</version>
  <description>The BaxterGBI_input_keyboard package</description>

  <maintainer email="lucre.grassi@gmail.com">Lucrezia Grassi</maintainer>

  <license>GPLv3</license>

  <author email="lucre.grassi@gmail.com">Lucrezia Grassi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>BaxterGBI_input_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>BaxterGBI_input_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
