<?xml version="1.0"?>
<package>
  <name>BaxterGBI_pbr</name>
  <version>1.1.0</version>
  <description>
   Node for baxter pbr services
  </description>

  <maintainer email="alessio.deluca.iic96d@gmail.com">
    Alessio De Luca
  </maintainer>
  <license>BSD</license>
  <url type="repository">
    https://github.com/RethinkRobotics/baxter_examples
  </url>
  <author>Alessio De Luca</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
