<?xml version="1.0"?>
<package>
  <name>BaxterGBI_pbr_msg</name>
  <version>1.1.0</version>
  <description>
   Node for baxter pbr messages
  </description>

  <maintainer email="alessio.deluca.iic96d@gmail.com">
    Alessio De Luca
  </maintainer>
  <maintainer email="giuliazaino46@gmail.com">
    Giulia Zaino
  </maintainer>
  <maintainer email="lunagava@me.com">
    Luna Gava
  </maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/EmaroLab/gesture_based_interface</url>
  
  <author>Alessio De Luca, Giulia Zaino, Luna Gava</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
</package>
