<?xml version="1.0"?>
<package format="2">
  <name>baxter_gbi_core</name>
  <version>0.0.0</version>
  <description>The BaxterGBI_core package</description>

  <maintainer email="antoniobongio@gmail.com">Antonino Bongiovanni</maintainer>
  <maintainer email="lucre.grassi@gmail.com">Lucrezia Grassi</maintainer>
  <maintainer email="marinoantonio96@gmail.com">Antonio Marino</maintainer>
  <maintainer email="roncapat@gmail.com">Patrick Roncagliolo</maintainer>

  <license>GPLv3</license>

  <author email="antoniobongio@gmail.com">Antonino Bongiovanni</author>
  <author email="lucre.grassi@gmail.com">Lucrezia Grassi</author>
  <author email="marinoantonio96@gmail.com">Antonio Marino</author>
  <author email="roncapat@gmail.com">Patrick Roncagliolo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>baxter_gbi_input_msgs</build_depend>
  <build_depend>baxter_gbi_pbr_msgs</build_depend>
  <build_depend>baxter_gbi_pbr_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>smach</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>baxter_gbi_input_msgs</exec_depend>
  <exec_depend>baxter_gbi_pbr_msgs</exec_depend>
  <exec_depend>baxter_gbi_pbr_srvs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
