<?xml version="1.0"?>
<package>
  <name>baxter_gbi_pbr</name>
  <version>1.1.0</version>
  <description>Node for baxter pbr services</description>

  <maintainer email="alessio.deluca.iic96d@gmail.com">Alessio De Luca</maintainer>
  <maintainer email="giuliazaino46@gmail.com">Giulia Zaino</maintainer>
  <maintainer email="lunagava@me.com">Luna Gava</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/EmaroLab/gesture_based_interface</url>
  
  <author email="alessio.deluca.iic96d@gmail.com">Alessio De Luca</author>
  <author email="lunagava@me.com">Luna Gava</author>
  <author email="giuliazaino46@gmail.com">Giulia Zaino</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>baxter_gbi_pbr_srvs</build_depend>
  <build_depend>baxter_gbi_pbr_msgs</build_depend>
  <build_depend>baxter_pykdl</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>baxter_gbi_pbr_srvs</run_depend>
  <run_depend>baxter_gbi_pbr_msgs</run_depend>
  <run_depend>baxter_pykdl</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
