<?xml version="1.0"?>
<package format="2">
  <name>baxter_gbi_pbr_msgs</name>
  <version>1.1.0</version>
  <description>
   Node for baxter pbr messages
  </description>

  <maintainer email="alessio.deluca.iic96d@gmail.com">
    Alessio De Luca
  </maintainer>
  <maintainer email="giuliazaino46@gmail.com">
    Giulia Zaino
  </maintainer>
  <maintainer email="lunagava@me.com">
    Luna Gava
  </maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/EmaroLab/gesture_based_interface</url>
  
  <author>Alessio De Luca, Giulia Zaino, Luna Gava</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  
</package>
