<?xml version="1.0"?>
<package>
	<name>beacons_presence_scanner</name>
	<version>0.0.0</version>
	<description>Beacons presence scanner package</description>

	<maintainer email="lucre.grassi@gmail.com">Lucrezia Grassi</maintainer>

	<license>GPLv3</license>

	<author email="lucre.grassi@gmail.com">Lucrezia Grassi</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>roslaunch</build_depend>
	<build_depend>std_msgs</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
