<?xml version="1.0"?>
<package>
    <name>beacons_proximity</name>
    <version>0.4.0</version>
    
    <maintainer email="roncapat@gmail.com">Patrick Roncagliolo</maintainer>
    <author email="roncapat@gmail.com">Patrick Roncagliolo</author>
    <author email="roncapat@gmail.com">Lucrezia Grassi</author>
    <author email="roncapat@gmail.com">Federico Tomat</author>
    <author email="roncapat@gmail.com">Alessandro Grattarola</author>
    
    <description>
        Android Wear app for Estimote Beacons
    </description>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rosjava_build_tools</build_depend>
    <build_depend>rosjava_messages</build_depend>
    <build_depend>rosjava_core</build_depend>
    <build_depend>android_core</build_depend>
</package>
