<?xml version="1.0"?>
<package>
	<name>beacons_transforms</name>
	<version>0.0.0</version>
	<description>Transform Beacon Coordinate System information into Baxter Coordinate System</description>

	<maintainer email="marco.lapolla5@gmail.com">Marco Lapolla</maintainer>
	<maintainer email="marta.lago@hotmail.it">Marta Lagomarsino</maintainer>

	<license>GPLv3</license>

	<author email="marco.lapolla5@gmail.com">Marco Lapolla</author>
	<author email="marta.lago@hotmail.it">Marta Lagomarsino</author>

	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>laser_geometry</build_depend>
	<build_depend>roslaunch</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>tf</build_depend> 
	<build_depend>visualization_msgs</build_depend> 

	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>laser_geometry</run_depend>
	<run_depend>tf</run_depend> 
	<run_depend>visualization_msgs</run_depend> 

	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
