<?xml version="1.0"?>
<package format="1">
  <name>http_bridge</name>
  <version>0.0.0</version>
  <description>The html_bridge_msgs package</description>

  <maintainer email="marco.lapolla.iic96@gmail.com">Marco Lapolla</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>baxter_gbi_input_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>baxter_gbi_input_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
